--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ dist
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
+
+tutorial-rxdb-0-_rxdb_internal
