--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/MohammedAl-Rowad/RxDB-real-time-node-yt#readme",
   "dependencies": {
+    "leveldown": "^5.6.0",
+    "pouchdb-adapter-leveldb": "^7.2.2",
     "rxdb": "^9.5.0",
     "rxjs": "^6.6.2"
   }
