--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leveldown": "^5.6.0",
     "pouchdb-adapter-leveldb": "^7.2.2",
     "rxdb": "^9.5.0",
-    "rxjs": "^6.6.2"
+    "rxjs": "^6.6.2",
+    "shortid": "^2.2.15"
   }
 }
