--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MohammedAl-Rowad/RxDB-real-time-node-yt#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "leveldown": "^5.6.0",
     "pouchdb-adapter-leveldb": "^7.2.2",
     "rxdb": "^9.5.0",
