--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/MohammedAl-Rowad/RxDB-real-time-node-yt#readme",
   "dependencies": {
     "colors": "^1.4.0",
+    "express": "^4.17.1",
     "leveldown": "^5.6.0",
     "pouchdb-adapter-leveldb": "^7.2.2",
     "rxdb": "^9.5.0",
     "rxjs": "^6.6.2",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "socket.io": "^2.3.0"
   }
 }
