--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
 
 tutorial-rxdb-0-_rxdb_internal
+tutorial-rxdb-0-users
